@@ -35,11 +35,13 @@ osd_lyrics_SOURCES = \
 	ol_player_songbird.c \
 	ol_player_xmms2.c \
 	ol_player_rhythmbox.c \
+	ol_player_moc.c \
 	ol_player_mpd.c \
 	ol_elapse_emulator.c \
 	ol_utils.c \
 	ol_utils_dbus.c \
 	ol_utils_dcop.c \
+	ol_utils_cmdline.c \
 	ol_lrc_parser.c \
 	ol_lrc_utility.c \
 	ol_trayicon.c \
